@@ -26,6 +26,7 @@ import sleeper.compaction.job.status.CompactionJobCreatedStatus;
 import sleeper.compaction.job.status.CompactionJobFinishedStatus;
 import sleeper.compaction.job.status.CompactionJobStartedStatus;
 import sleeper.compaction.job.status.CompactionJobStatus;
+import sleeper.core.partition.PartitionsBuilderSplitsFirst;
 import sleeper.core.record.process.ProcessRunTime;
 import sleeper.core.record.process.status.ProcessRun;
 
@@ -33,7 +34,6 @@ import java.io.PrintStream;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -57,10 +57,10 @@ public abstract class CompactionJobStatusReporterTestBase {
 
     protected static List<CompactionJobStatus> mixedJobStatuses() {
         CompactionJobTestDataHelper dataHelper = new CompactionJobTestDataHelper();
-        dataHelper.partitionTree(builder -> builder
-                .leavesWithSplits(
-                        Arrays.asList(partition("A"), partition("B"), partition("C"), partition("D")),
-                        Arrays.asList("ddd", "ggg", "kkk"))
+        dataHelper.partitionTreeFromSchema(schema -> PartitionsBuilderSplitsFirst
+                .leavesWithSplits(schema,
+                        List.of(partition("A"), partition("B"), partition("C"), partition("D")),
+                        List.of("ddd", "ggg", "kkk"))
                 .parentJoining(partition("E"), partition("A"), partition("B"))
                 .parentJoining(partition("F"), partition("E"), partition("C"))
                 .parentJoining(partition("G"), partition("F"), partition("D")));
@@ -149,8 +149,8 @@ public abstract class CompactionJobStatusReporterTestBase {
 
     protected static List<CompactionJobStatus> jobsWithLargeAndDecimalStatistics() {
         CompactionJobTestDataHelper dataHelper = new CompactionJobTestDataHelper();
-        dataHelper.partitionTree(builder -> builder
-                .leavesWithSplits(Arrays.asList(partition("A"), partition("B")), Collections.singletonList("ggg"))
+        dataHelper.partitionTreeFromSchema(schema -> PartitionsBuilderSplitsFirst.leavesWithSplits(schema,
+                List.of(partition("A"), partition("B")), List.of("ggg"))
                 .parentJoining(partition("C"), partition("A"), partition("B")));
 
         CompactionJob job1 = dataHelper.singleFileCompaction(partition("C"));
